# pywr-optirustic

./: LICENSE  README.md  pyproject.toml  pywr_optirustic.pyi
data/: timeseries.json
src/: error.rs  lib.rs  main.rs  problem.rs  scenario.rs
src/test_data/: constant_var_parameter.json  empty_rbf_var_parameter.json  model_for_scenario.json  no_parameters.json  no_recorder.json  no_var_parameters.json  opt_scenario.json  rbf_var_parameter.json  rbf_var_parameter_invalid_day_bound.json  rbf_var_parameter_no_day_1.json  rbf_var_parameter_points_too_close.json
